Added example for POST request
